<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_create_sample_data">Create Sample Data</string>
    <string name="action_delete_data">Delete Data</string>
    <string name="emptyview_textview">Inventory is empty. Click the + to add some.</string>
    <string name="mainactivity_toast_deletedfrominventory">items deleted from inventory.</string>
    <string name="sampledata_product1_name">PixelBlaster</string>
    <string name="sampledata_product1_suppliername">Target</string>
    <string name="sampledata_product1_supplierphone">111&#8211;111&#8211;1111</string>
    <string name="sampledata_product2_name">Earbuds</string>
    <string name="sampledata_product2_suppliername">Ingram Micro</string>
    <string name="sampledata_product2_supplierphone">111&#8211;111&#8211;1121</string>
    <string name="general_priceprepend">Price:</string>
    <string name="general_quantityprepend">Quantity:</string>
    <string name="general_priceformat">$%.2f</string>
    <string name="general_priceformatedit">%.2f</string>
    <string name="general_toast_solditem">Sold 1 item.</string>
    <string name="general_toast_outofstock">Out of stock, order more.</string>
    <string name="error_failedinsertrow">Failed to insert row for</string>
    <string name="editactivity_title_editmode">Edit Inventory</string>
    <string name="editactivity_title_addmode">Add Inventory</string>
    <string name="editactivity_toast_noinfoprovided">You must provide some info to save.</string>
    <string name="error_savingrecord">Error saving record.</string>
    <string name="general_discardchanges_message">Do you want to discard changes?</string>
    <string name="general_discardchanges_positive">Discard</string>
    <string name="general_discardchanges_negative">Keep Editing</string>
    <string name="general_phoneintent_prependtype">tel:</string>
    <string name="error_callingvendor">Error calling vendor.</string>
    <string name="error_loadinginventory">Error loading inventory item.</string>
    <string name="error_restocking">Error restocking item.</string>
    <string name="general_toast_restockitem">Restocked item.</string>
    <string name="general_toast_inventoryitemdeleted">Inventory item deleted.</string>
    <string name="error_deletingrecord">Error deleting record.</string>
    <string name="general_deleteinventoryitem_message">Delete this inventory item?</string>
    <string name="general_deleteinventoryitem_positive">Delete</string>
    <string name="general_deleteinventoryitem_negative">Cancel</string>
    <string name="activityxml_productname">Product Name:</string>
    <string name="activityxml_productname_hint">Name</string>
    <string name="activityxml_price">Price:</string>
    <string name="activityxml_price_hint">Price</string>
    <string name="activityxml_quantity">Quantity:</string>
    <string name="activityxml_quantity_hint">Quantity</string>
    <string name="activityxml_suppliername">Supplier Name:</string>
    <string name="activityxml_suppliername_hint">Supplier Name</string>
    <string name="activityxml_supplierphone">Supplier Phone:</string>
    <string name="activityxml_supplierphone_hint">Supplier Phone</string>
    <string name="activityxml_button_restock">Restock %1$d</string>
    <string name="activityxml_button_sale">Sale</string>
    <string name="listitem_placeholdertext">placeholder</string>
    <string name="listitem_font_general">sans-serif</string>
    <string name="listitem_font_product">sans-serif-medium</string>
    <string name="error_deletenotsupportedfor">Delete is not supported for</string>
    <string name="error_updatenotsupportedfor">Update is not supported for</string>
    <string name="error_cannotqueryunknownuri">Cannot query unknown URI</string>
    <string name="error_gettypenotsupported_pre">GetType is not supported for or Unknown URI</string>
    <string name="error_gettypenotsupported_post">with match</string>
    <string name="error_insertionisnotsupported">Insertion is not supported for</string>
    <string name="error_required_productname">Product name is required</string>
    <string name="error_required_pricenotnegative">Price cannot be negative</string>
    <string name="error_required_quantitynotnegative">Quantity cannot be negative</string>
    <string name="contentdescription_subtrack_button">subtrack button</string>
    <string name="contentdescription_add_button">add button</string>
    <string name="menu_edit_save">Save</string>
    <string name="menu_edit_order_from_supplier">Order From Supplier</string>
    <string name="menu_detail_edit">Edit</string>
    <string name="menu_detail_delete">Delete</string>
    <string name="menu_detail_order_from_supplier">Order From Supplier</string>
</resources>
